--- a/index.html
+++ b/index.html
@@ -3,26 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ร้านขายเสื้อผ้า</title>
+  <title>ร้านขายเสื้อผ้า - หน้าแรก</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
     <h1>ร้านขายเสื้อผ้า</h1>
     <nav>
-      <a href="index.html">หน้าแรก</a> |
-      <a href="products.html">สินค้า</a> |
-      <a href="cart.html">ตะกร้า</a> |
-      <a href="contact.html">ติดต่อ</a>
+      <a href="index.html">หน้าแรก</a>
+      <a href="products.html">สินค้า</a>
+      <a href="cart.html">ตะกร้า</a>
+      <a href="contact.html">ติดต่อเรา</a>
     </nav>
   </header>
 
   <main>
-    <h2>ยินดีต้อนรับ!</h2>
-    <p>เว็บไซต์ร้านขายเสื้อผ้าออนไลน์ โทนสีพาสเทล</p>
+    <section class="hero">
+      <h2>แฟชั่นโทนพาสเทล</h2>
+      <p>ใส่แล้วดูดี มีสไตล์ ราคาสบายกระเป๋า</p>
+      <a href="products.html" class="btn">เลือกซื้อเลย</a>
+    </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 ร้านขายเสื้อผ้า</p>
+    <p>© 2025 ร้านขายเสื้อผ้า</p>
   </footer>
 </body>
 </html>
